# jam-yourself

./: .gitignore  BLOG-INTEGRATION.md  README.md  pyproject.toml  requirements.txt
docs/: INTEGRATION.md  embed-example.html  index.html  jamyourself-components.js  package.json
docs/css/: style.css
docs/js/: app.js  audio.js  ffmpeg.js  recorder.js  store.js  ui.js  videorender.js
docs/js/dsp/: beats.js  constants.js  countin.js  engine.js  fft.js  mix.js  onset.js  stretch.js  tempo.js  warp.js
docs/tests/: run.mjs
examples/: align_pair.py  audio_jam.py  drift_demo.py
src/clickless/: __init__.py  engine.py
src/jamyourself/: __init__.py  cli.py  countin.py  engine.py  grid.py  pipeline.py  render.py  video.py
tests/: test_countin.py  test_grid.py  test_pipeline.py  test_render.py  test_synthetic.py  test_video.py
